--- a/mmb/mmb.am
+++ b/mmb/mmb.am
@@ -15,17 +15,17 @@ vppapitestplugins_LTLIBRARIES += mmb_test_plugin.la
 vppplugins_LTLIBRARIES += mmb_plugin.la
 
 mmb_plugin_la_SOURCES =		\
-	mmb/sample.c				\
+	mmb/mmb.c				\
 	mmb/node.c				\
-	mmb/sample_plugin.api.h
+	mmb/mmb_plugin.api.h
 
-API_FILES += mmb/sample.api
+API_FILES += mmb/mmb.api
 
 nobase_apiinclude_HEADERS +=			\
-  mmb/sample_all_api_h.h				\
-  mmb/sample_msg_enum.h				\
-  mmb/sample.api.h
+  mmb/mmb_all_api_h.h				\
+  mmb/mmb_msg_enum.h				\
+  mmb/mmb.api.h
 
-mmb_test_plugin_la_SOURCES = mmb/sample_test.c mmb/sample_plugin.api.h
+mmb_test_plugin_la_SOURCES = mmb/mmb_test.c mmb/mmb_plugin.api.h
 
 # vi:syntax=automake
