--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -14,6 +14,7 @@ Vagrant.configure(2) do |config|
 
   config.ssh.forward_agent = true
   config.ssh.forward_x11 = true
+  config.ssh.insert_key = false
 
   config.vm.provider "virtualbox" do |vb|
       vb.customize ["modifyvm", :id, "--ioapic", "on"]
