--- a/mmb-plugin/mmb.am
+++ b/mmb-plugin/mmb.am
@@ -17,7 +17,8 @@ vppplugins_LTLIBRARIES += mmb_plugin.la
 mmb_plugin_la_SOURCES =		\
 	mmb/mmb.c				\
 	mmb/node.c				\
-	mmb/mmb_plugin.api.h
+	mmb/mmb_plugin.api.h \
+   mmb/mmb_format.c
 
 API_FILES += mmb/mmb.api
 
