--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,12 +1,21 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
+$script = <<SCRIPT
+  ln -s /vagrant/simple_tracebox.py /home/vagrant/simple_tracebox.py
+  service vpp stop
+SCRIPT
+
 Vagrant.configure(2) do |config|
 
-  config.vm.box = "puppetlabs/ubuntu-16.04-64-nocm"
-  config.vm.box_check_update = false
+  config.vm.box = "uliege/mmb"
+  config.vm.box_url = "http://queen.run.montefiore.ulg.ac.be/~iurman/mmb.box"
 
-  config.vm.provision :shell, :path => File.join(File.dirname(__FILE__),"build.sh")
+  config.vm.hostname = "mmb-tutorial"
+  config.vm.define "mmb-tutorial"
+  config.vm.post_up_message = "Welcome in MMB tutorial !"
+
+  config.vm.provision :shell, :inline => $script
 
   if Vagrant.has_plugin?("vagrant-cachier")
     config.cache.scope = :box
@@ -17,19 +26,14 @@ Vagrant.configure(2) do |config|
   config.ssh.insert_key = false
 
   config.vm.provider "virtualbox" do |vb|
+      vb.name = "mmb-tutorial"
       vb.customize ["modifyvm", :id, "--ioapic", "on"]
       vb.memory = "4096"
       vb.cpus = "2"
-
-      # rsync the vpp-mb directory if provision hasn't happened yet
-      unless File.exist? (".vagrant/machines/default/virtualbox/action_provision")
-        config.vm.synced_folder "../", "/home/vagrant/vpp-mb", type: "rsync",
-         rsync__auto: false,
-         rsync__exclude: [ "vagrant*" ]
-      end
 
       #support for the SSE4.x instruction is required in some versions of VB.
       vb.customize ["setextradata", :id, "VBoxInternal/CPUM/SSE4.1", "1"]
       vb.customize ["setextradata", :id, "VBoxInternal/CPUM/SSE4.2", "1"]
   end
 end
+
