added mmb_opts.c mmb_opts.h

--- a/mmb-plugin/mmb.am
+++ b/mmb-plugin/mmb.am
@@ -19,6 +19,7 @@ mmb_plugin_la_SOURCES = \
   mmb/mmb_format.c      \
   mmb/mmb_classify.c    \
   mmb/mmb_rewrite.c     \
+  mmb/mmb_opts.c        \
   mmb/mmb_plugin.api.h
 
 API_FILES += mmb/mmb.api
