--- a/mmb-plugin/mmb.am
+++ b/mmb-plugin/mmb.am
@@ -11,7 +11,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# vppapitestplugins_LTLIBRARIES += mmb_test_plugin.la
 vppplugins_LTLIBRARIES += mmb_plugin.la
 
 mmb_plugin_la_SOURCES = \
@@ -20,16 +19,6 @@ mmb_plugin_la_SOURCES = \
   mmb/mmb_classify.c    \
   mmb/mmb_rewrite.c     \
   mmb/mmb_opts.c        \
-  mmb/mmb_conn.c     \
-  mmb/mmb_plugin.api.h  
-
-#API_FILES += mmb/mmb.api
-
-#nobase_apiinclude_HEADERS += \
-#  mmb/mmb_all_api_h.h        \
-#  mmb/mmb_msg_enum.h         \
-#  mmb/mmb.api.h           
-
-#mmb_test_plugin_la_SOURCES = mmb/mmb_test.c mmb/mmb_plugin.api.h
+  mmb/mmb_conn.c    
 
 # vi:syntax=automake
